Advance Python-only roadmap
